Closed Bug 1935861 Opened 1 year ago Closed 1 year ago

Crash in [@ DragData::IsDataValid]

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

VERIFIED FIXED
135 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- unaffected
firefox135 + verified
firefox136 --- verified

People

(Reporter: yoasif, Assigned: stransky)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/0a1a1a3b-f454-4270-8f69-73d760241207

MOZ_CRASH Reason:

MOZ_DIAGNOSTIC_ASSERT(false) (DragData::IsDataValid(): Unknow MIME type.)

Top 10 frames:

0  libxul.so  DragData::IsDataValid() const  widget/gtk/nsDragService.cpp:495
1  libxul.so  nsDragSession::TargetDataReceived(_GtkWidget*, _GdkDragContext*, int, int, _G...  widget/gtk/nsDragService.cpp:1506
1  libxul.so  mozilla::ScopeExit<nsDragSession::TargetDataReceived(_GtkWidget*, _GdkDragCon...  mfbt/ScopeExit.h:106
1  libxul.so  nsDragSession::TargetDataReceived(_GtkWidget*, _GdkDragContext*, int, int, _G...  widget/gtk/nsDragService.cpp:1581
2  libxul.so  nsWindow::OnDragDataReceivedEvent(_GtkWidget*, _GdkDragContext*, int, int, _G...  widget/gtk/nsWindow.cpp:5425
3  libxul.so  drag_data_received_event_cb(_GtkWidget*, _GdkDragContext*, int, int, _GtkSele...  widget/gtk/nsWindow.cpp:8521
4  libgtk-3.so.0  _gtk_marshal_VOID__OBJECT_INT_INT_BOXED_UINT_UINTv  debian/build/deb/gtk/gtkmarshalers.c:5999
5  libgobject-2.0.so.0  _g_closure_invoke_va  gobject/gclosure.c:896
6  libgobject-2.0.so.0  signal_emit_valist_unlocked  gobject/gsignal.c:3423
7  libgobject-2.0.so.0  g_signal_emit_by_name  gobject/gsignal.c:3623
See Also: → 1913643
Component: Audio/Video → Widget: Gtk
See Also: 1913643
Flags: needinfo?(stransky)

Is that TB only?
Thanks.

Flags: needinfo?(stransky) → needinfo?(yoasif)

Set release status flags based on info from the regressing bug 1913643

(In reply to Martin Stránský [:stransky] (ni? me) from comment #2)

Is that TB only?
Thanks.

No, Nightly135.0a1 on ubuntu24.04 also crashed.
https://crash-stats.mozilla.org/report/index/79cb46fb-4e38-4487-8daf-d5d9d0241209

STR:

  1. Start two instances of Nightly135 with different profiles (browser A and B)
  2. Open an image on browser A
  3. Dragging the image from browser A to another browser(browser B)'s content area.

AR:
browser B will crash.

And also
Dragging selected text from LibreOffice Writer to Nightly135.0a1 crashes the browser.

Will update the check then, Thanks.

Flags: needinfo?(stransky)

[Tracking Requested - why for this release]: frequent crash regression

Flags: needinfo?(yoasif)

The bug is marked as tracked for firefox135 (nightly). However, the bug still isn't assigned.

:gcp, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(gpascutto)
Flags: needinfo?(gpascutto)

Assigning based on comment 5.

Assignee: nobody → stransky
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/ddd973acce13 [Linux] Don't check MIME type for mDragData r=emilio

(In reply to Alice0775 White from comment #4)

  1. Dragging the image from browser A to another browser(browser B)'s content area.

AR:
browser B will crash.

And also
Dragging selected text from LibreOffice Writer to Nightly135.0a1 crashes the browser.

Also, dragging a link from Browser A over Browser B will crash browser B; that's the way in which I just tripped over this.

(Glad to see a fix has already landed - thanks to all involved!)

Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 135 Branch
Flags: qe-verify+

I was able to reproduce the crash on Ubuntu 22 using FF build 135.0a1(20241209213901).
Verified as fixed Ubuntu 22/Win11 using FF builds 136.0a1 and 135.0b4.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: