Bug 1935861 [Linux] Don't check MIME type for mDragData r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D231683